IE6 and IE7 can't overflow an image out of a fixed height container. Change the header image to be positioned absolutely over the container area with the same offsets as before.

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -37,18 +37,24 @@ a img
 
 #header_menu
   margin: 0
+  padding: 0
   text-align: center
   color: #FFFFFF
   font-size: 14px
   font-weight: bold
-  height: 36px
+  height: 67px
   background: url(/images/header_bg.png) no-repeat
-  padding-top: 31px
+  position: relative
   
   img
     border: none
 
   a
+    display: block
+    position: absolute
+    top: 31px
+    width: 100%
+    left: 0
     color: #83B12D
     text-decoration: none
 
